--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
 						              </ol>
 						                 <div class="carousel-inner">
 						                     <div class="carousel-item active">
-						                        <img src="./images./construction.JPG" class="d-block w-100 h-50">
+						                        <img src="./images/construction.JPG" class="d-block w-100 h-50">
 						                        <div class="carousel-caption d-none d-md-block">
 						                           <h5>Overseeing Construction</h5>
 						                        </div>
 						                    </div>
 						                    
 						                    <div class="carousel-item">
-						                        <img src="./images./tanks.JPG" class="d-block w-100" alt="...">
+						                        <img src="./images/tanks.JPG" class="d-block w-100" alt="...">
 						                          <div class="carousel-caption d-none d-md-block">
 						                              <h5>Tank-quality post-Construction</h5>
 						                         </div>
 						                    </div>
 						                    
 						                    <div class="carousel-item">
-						                        <img src="./images./sunday.JPG" class="d-block w-100" alt="...">
+						                        <img src="./images/sunday.JPG" class="d-block w-100" alt="...">
 						                        <div class="carousel-caption d-none d-md-block">
 						                              <h5>Working on a holiday</h5>
 						                        </div>
@@ -195,13 +195,13 @@
     		  <div class="col-md-8 col-lg-4 my-3">
     			<div class="row">
     				<div class="col-3">
-    					<img src="./images./logo-html5.png">
+    					<img src="./images/logo-html5.png">
     				</div>
     				<div class="col-3">
-    					<img src="./images./logo-css3.png">
+    					<img src="./images/logo-css3.png">
     				</div>
     				<div class="col-3">
-    					<img src="./images./logo-bootstrap.png">
+    					<img src="./images/logo-bootstrap.png">
     				</div>
     			</div>
     		</div>
@@ -210,13 +210,13 @@
     		<div class="col-md-8 col-lg-4 my-3">
     			<div class="row justify content center">
     				<div class="col-3">
-    						<img src="./images./logo-git.png" >
+    						<img src="./images/logo-git.png" >
     				</div>
     				<div class="col-3">
-    					<img src="./images./logo-sublime-text-3.png">
+    					<img src="./images/logo-sublime-text-3.png">
     				</div>
     				<div class="col-3 justify-content-center">
-    					<img src="./images./logo-gitlab-ci-cd.png">
+    					<img src="./images/logo-gitlab-ci-cd.png">
     				</div>
     			</div>
     		</div>
