testing photo change

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="container-fluid  bg-dark text-light min-vh-100 p-3 p-md-5">
 					<div class="row text-center">
 						<div class="col-12 col-lg-6">
-						<img class="mt-5 mt-md-0 rounded-circle" src="./images./photo.JPG" width="350"  >
+						<img class="mt-5 mt-md-0 rounded-circle" src="./images/photo.JPG" width="350"  >
 						<h1>John Mendoza</h1>
 						<h3 >Web Developer</h3>
 					</div>
